--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h1 {
   position: absolute;
   top: 5%;
   left: 20%;
-  /* display: none; */
+  display: none;
 }
 
 .block {
@@ -69,7 +69,8 @@ h1 {
 }
 
 .yell {
-  background-color: yellow;
+  /* background-color: yellow; */
+  background-color: white;
 }
 
 .test {
