--- a/style.css
+++ b/style.css
@@ -20,14 +20,20 @@ body {
   margin: auto;
   /* background-color: darkkhaki; */
   padding: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
-h1 {
+.main {
+  margin-right: 3rem;
+}
+
+h2 {
   text-align: center;
-  text-transform: uppercase;
   margin-top: 1rem;
   margin-bottom: 2rem;
   color: #333;
+  text-transform: uppercase;
 }
 
 .inner__wrapper {
@@ -61,7 +67,7 @@ h1 {
   position: absolute;
   top: 5%;
   left: 20%;
-  /* display: none; */
+  display: none;
 }
 
 .block {
@@ -89,7 +95,19 @@ h1 {
   display: block;
   margin: auto;
 }
-
-/* .long{
-  top: ;
-} */
+/*
+.info-grid {
+   width: 20.45rem; */
+/* background-color: red; */
+/* padding: 0.5rem; */
+/* text-align: center; 
+}
+*/
+.grid {
+  width: 16.3rem;
+  height: 16.3rem;
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+}
