--- a/style.css
+++ b/style.css
@@ -140,3 +140,14 @@ p {
   text-align: center;
   margin-top: 2rem;
 }
+@media screen and (min-width: 601px) and (max-width: 1800px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 45%;
+  }
+}
